--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "framer-motion": "^12.34.2",
     "lucide-react": "^0.575.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "@supabase/supabase-js": "^2.48.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
